Initial work on stream/details angular controllers

--- a/src/sentry/templates/sentry/layout.html
+++ b/src/sentry/templates/sentry/layout.html
@@ -3,7 +3,7 @@
 {% load static_compiler %}
 {% get_sentry_version %}
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:ng="http://angularjs.org" id="ng-app" ng-app="Sentry">
     <head>
         <meta http-equiv="content-type" content="text/html; charset=utf-8">
         <meta name="robots" content="NONE,NOARCHIVE">
