--- a/src/sentry/templates/sentry/groups/details.html
+++ b/src/sentry/templates/sentry/groups/details.html
@@ -11,8 +11,53 @@
     {% handle_before_events request group %}
 
     <div id="details">
-        <div id="event_list" class="inactive"></div>
+        <div id="event_list" class="inactive" ng-controller="StreamCtrl">
+            <ul class="group-list">
+                {% verbatim %}
+                <li class="group {{getLevelClassName(group)}} with-sparkline" data-id="{{group.id}}"
+                    ng-repeat="group in groups | orderBy:'score'">
+                    <div class="count" data-count="{{utils.formatNumber(group.count)}}">
+                        <span title="{{group.count}}">{{utils.formatNumber(group.count)}}</span>
+                    </div>
+                    <div class="details">
+                        <h3>{{group.title}}</h3>
+                        <p class="message">{{group.message}}</p>
+                        <div class="meta">
+                            <span class="last-seen pretty-date" title="{{group.lastSeen}}">{{utils.prettyDate(group.lastSeen)}}</span>
+                            <span class="time-spent" ng-show="group.timeSpent">{{Math.round(group.timeSpent)}}ms</span>
+                            <span class="tag tag-project">{{group.project.name}}</span>
+                            <span class="tag tag-logger"><a href="{{loggerUrl}}">{{logger}}</a></span>
+                            <span ng-repeat="version in group.versions" class="tag tag-version">{{version}}</span>
+                            <span ng-repeat="tag in group.tags" class="tag">{{tag}}</span>
+                        </div>
+                        <span class="sparkline"></span>
+                        <ul class="actions">
+                            <li ng-show="canResolve(group)">
+                                <a href="#" data-action="resolve">
+                                    <i aria-hidden="true" class="icon-checkmark"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#"
+                                   data-action="bookmark"
+                                   ng-class="{true:'checked'}[group.isBookmarked]"
+                                   class="bookmark"
+                                   title="Bookmark">
+                                    <i aria-hidden="true" class="icon-star"></i>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </li>
+                {% endverbatim %}
+            </ul>
+
+        </div>
     </div>
+
+    <script>
+    window.groups = [{{ group|to_json:request|safe }}];
+    </script>
 
     <section class="body">
         {% block inner %}
@@ -49,7 +94,7 @@
                 </div>
 
                 {% include "sentry/partial/event_nav.html" %}
-            
+
                 {% if group.is_muted %}
                     <div class="alert alert-info">This event has been muted. You will not be notified of any changes and it will not show up in the default feed.</div>
                 {% endif %}
@@ -143,14 +188,4 @@
     {% for html in group|get_widgets:request %}
         {{ html|safe }}
     {% endfor %}
-{% endblock %}
-
-{% block content_after %}
-    <script type="text/javascript">
-    $(document).ready(function() {
-        new app.GroupDetailsPage({
-            group: {{ group|to_json:request|safe }},
-        });
-    });
-    </script>
 {% endblock %}
