--- a/src/sentry/templates/sentry/groups/group_list.html
+++ b/src/sentry/templates/sentry/groups/group_list.html
@@ -136,7 +136,47 @@
         </ul>
     {% endif %}
 
-    <div id="event_list"></div>
+    <div id="event_list" ng-controller="StreamCtrl">
+        <ul class="group-list">
+            {% verbatim %}
+            <li class="group {{getLevelClassName(group)}} with-sparkline" data-id="{{group.id}}"
+                ng-repeat="group in groups | orderBy:'score'">
+                <div class="count" data-count="{{utils.formatNumber(group.count)}}">
+                    <span title="{{group.count}}">{{utils.formatNumber(group.count)}}</span>
+                </div>
+                <div class="details">
+                    <h3><a href="{{group.permalink}}">{{group.title}}</a></h3>
+                    <p class="message">{{group.message}}</p>
+                    <div class="meta">
+                        <span class="last-seen pretty-date" title="{{group.lastSeen}}">{{utils.prettyDate(group.lastSeen)}}</span>
+                        <span class="time-spent" ng-show="group.timeSpent">{{Math.round(group.timeSpent)}}ms</span>
+                        <span class="tag tag-project">{{group.project.name}}</span>
+                        <span class="tag tag-logger"><a href="{{loggerUrl}}">{{logger}}</a></span>
+                        <span ng-repeat="version in group.versions" class="tag tag-version">{{version}}</span>
+                        <span ng-repeat="tag in group.tags" class="tag">{{tag}}</span>
+                    </div>
+                    <span class="sparkline"></span>
+                    <ul class="actions">
+                        <li ng-show="canResolve(group)">
+                            <a href="#" data-action="resolve">
+                                <i aria-hidden="true" class="icon-checkmark"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#"
+                               data-action="bookmark"
+                               ng-class="{true:'checked'}[group.isBookmarked]"
+                               class="bookmark"
+                               title="Bookmark">
+                                <i aria-hidden="true" class="icon-star"></i>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </li>
+            {% endverbatim %}
+        </ul>
+    </div>
 
     <div class="btn-toolbar" style="border-bottom: none">
         <div class="btn-group pull-right">
@@ -146,13 +186,8 @@
     </div>
 
     <script>
-    $(function(){
-        new app.StreamPage({
-            groups: {{ event_list.paginator.objects|to_json:request|safe }},
-            canStream: {{ has_realtime|to_json|safe }},
-            realtime: true
-        });
-    });
+    // TODO(dcramer): consider moving this to an ajax call
+    window.groups = {{ event_list.paginator.objects|to_json:request|safe }};
     </script>
 
 {% endblock %}
