--- a/src/sentry/templates/sentry/groups/group_list.html
+++ b/src/sentry/templates/sentry/groups/group_list.html
@@ -139,7 +139,7 @@
     <div id="event_list" ng-controller="StreamCtrl">
         <ul class="group-list">
             {% verbatim %}
-            <li class="group {{getLevelClassName(group)}} with-sparkline" data-id="{{group.id}}"
+            <li class="group {{group.getLevelClassName()}} with-sparkline" data-id="{{group.id}}"
                 ng-repeat="group in groups | orderBy:'score'">
                 <div class="count" data-count="{{utils.formatNumber(group.count)}}">
                     <span title="{{group.count}}">{{utils.formatNumber(group.count)}}</span>
@@ -187,7 +187,9 @@
 
     <script>
     // TODO(dcramer): consider moving this to an ajax call
-    window.groups = {{ event_list.paginator.objects|to_json:request|safe }};
+    Sentry.constant('initial', {
+       groups: {{ event_list.paginator.objects|to_json:request|safe }}
+    });
     </script>
 
 {% endblock %}
