More model work (use prototypes)

--- a/src/sentry/templates/sentry/groups/group_list.html
+++ b/src/sentry/templates/sentry/groups/group_list.html
@@ -157,7 +157,7 @@
                     </div>
                     <span class="sparkline"></span>
                     <ul class="actions">
-                        <li ng-show="canResolve(group)">
+                        <li ng-show="group.canResolve">
                             <a href="#" data-action="resolve">
                                 <i aria-hidden="true" class="icon-checkmark"></i>
                             </a>
