--- a/src/sentry/static/sentry/css/sentry-simple.css
+++ b/src/sentry/static/sentry/css/sentry-simple.css
@@ -5451,3 +5451,79 @@ td.visible-print {
     display: none !important;
   }
 }
+body {
+  font-family: "Avenir Next", "Avenir", "Helvetica Neue", helvetica, sans-serif;
+  color: #454C50;
+}
+header {
+  background: #465262;
+  color: #fff;
+  padding: 30px 0;
+  margin: 0 0 20px;
+}
+header a {
+  color: #fff;
+}
+header .user-nav li {
+  list-style: none;
+  float: left;
+  margin-left: 30px;
+}
+.container {
+  max-width: 960px;
+}
+.project-nav {
+  margin: 0 0 20px;
+}
+.events {
+  padding-left: 0;
+  list-style: none;
+}
+.events .event {
+  position: relative;
+  border-bottom: 3px solid #F8F9FA;
+  padding: 20px 0 20px 64px;
+}
+.events .event:last-child {
+  border-bottom: none;
+}
+.events .count {
+  font-size: 16px;
+  letter-spacing: -1px;
+  width: 52px;
+  height: 52px;
+  line-height: 50px;
+  text-align: center;
+  position: absolute;
+  left: 0;
+  top: 20px;
+  border: 3px solid #EEF0F3;
+  border-radius: 52px;
+}
+.events .details h3 {
+  font-size: 20px;
+  line-height: 1.4;
+  margin: 0;
+}
+.events .details h3 a {
+  color: inherit;
+}
+.events .details p {
+  line-height: 1.4;
+  color: #79858C;
+  margin-bottom: 0;
+}
+.events .details h3 a,
+.events .details p {
+  display: block;
+  max-width: 100%;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
+.events .details .meta {
+  color: #c6c6cc;
+}
+.events .details .meta a {
+  color: #c6c6cc;
+}
