--- a/src/sentry/static/sentry/less/sentry-simple.less
+++ b/src/sentry/static/sentry/less/sentry-simple.less
@@ -47,3 +47,94 @@
 // Utility classes
 @import "../bootstrap3/utilities.less";
 @import "../bootstrap3/responsive-utilities.less";
+
+// Sentry theme:
+
+body {
+  font-family: "Avenir Next", "Avenir", "Helvetica Neue", helvetica, sans-serif;
+  color: #454C50;
+}
+
+header {
+  background: #465262;
+  color: #fff;
+  padding: 30px 0;
+  margin: 0 0 20px;
+  a {
+    color: #fff;
+  }
+
+  .user-nav {
+    li {
+      list-style: none;
+      float: left;
+      margin-left: 30px;
+    }
+  }
+}
+
+.container {
+  max-width: 960px;
+}
+
+.project-nav {
+  margin: 0 0 20px;
+}
+
+.events {
+  .list-unstyled;
+  .event {
+    position: relative;
+    border-bottom: 3px solid #F8F9FA;
+    padding: 20px 0 20px 64px;
+
+    &:last-child {
+      border-bottom: none;
+    }
+  }
+
+  .count {
+    font-size: 16px;
+    letter-spacing: -1px;
+    .square(52px);
+    line-height:50px;
+    text-align: center;;
+    position: absolute;
+    left: 0;
+    top: 20px;
+    border: 3px solid #EEF0F3;
+    border-radius: 52px;
+  }
+
+  .details {
+    h3 {
+      font-size: 20px;
+      line-height: 1.4;
+      margin: 0;
+      a {
+        color: inherit;
+      }
+    }
+
+    p {
+      line-height: 1.4;
+      color: #79858C;
+      margin-bottom: 0;
+    }
+
+    h3 a, p {
+      display: block;
+      max-width: 100%;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      overflow: hidden;
+    }
+
+    .meta {
+      color: #c6c6cc;
+      a {
+        color: #c6c6cc;
+      }
+    }
+  }
+}
