Add new icon font. Style stream page.

--- a/src/sentry/static/sentry/bootstrap3/buttons.less
+++ b/src/sentry/static/sentry/bootstrap3/buttons.less
@@ -14,7 +14,7 @@
   vertical-align: middle;
   cursor: pointer;
   background-image: none; // Reset unusual Firefox-on-Android default style; see https://github.com/necolas/normalize.css/issues/214
-  border: 1px solid transparent;
+  border: 2px solid transparent;
   white-space: nowrap;
   .button-size(@padding-base-vertical; @padding-base-horizontal; @font-size-base; @line-height-base; @border-radius-base);
   .user-select(none);
@@ -33,7 +33,8 @@
   &.active {
     outline: 0;
     background-image: none;
-    .box-shadow(inset 0 3px 5px rgba(0,0,0,.125));
+    position: relative;
+    top: 2px;
   }
 
   &.disabled,
