--- a/src/sentry/static/sentry/bootstrap3/navs.less
+++ b/src/sentry/static/sentry/bootstrap3/navs.less
@@ -17,6 +17,7 @@
     display: block;
 
     > a {
+      color: @nav-tabs-active-link-hover-color;
       position: relative;
       display: block;
       padding: @nav-link-padding;
@@ -74,17 +75,18 @@
 
 // Give the tabs something to sit on
 .nav-tabs {
-  border-bottom: 1px solid @nav-tabs-border-color;
+  border-bottom: 3px solid @nav-tabs-border-color;
   > li {
     float: left;
     // Make the list-items overlay the bottom border
-    margin-bottom: -1px;
+    margin-bottom: -3px;
 
     // Actual tabs (as links)
     > a {
-      margin-right: 2px;
+      font-weight: 600;
+      margin-right: 5px;
       line-height: @line-height-base;
-      border: 1px solid transparent;
+      border: 3px solid transparent;
       border-radius: @border-radius-base @border-radius-base 0 0;
       &:hover {
         border-color: @nav-tabs-link-hover-border-color @nav-tabs-link-hover-border-color @nav-tabs-border-color;
@@ -98,7 +100,7 @@
       &:focus {
         color: @nav-tabs-active-link-hover-color;
         background-color: @nav-tabs-active-link-hover-bg;
-        border: 1px solid @nav-tabs-active-link-hover-border-color;
+        border: 3px solid @nav-tabs-active-link-hover-border-color;
         border-bottom-color: transparent;
         cursor: default;
       }
