Initialize ember app. Begin routing.

--- a/src/sentry/static/sentry/bootstrap3/type.less
+++ b/src/sentry/static/sentry/bootstrap3/type.less
@@ -24,7 +24,7 @@ h1, h2, h3, h4, h5, h6,
 h1,
 h2,
 h3 {
-  margin-top: @line-height-computed;
+  margin-top: 0;
   margin-bottom: (@line-height-computed / 2);
 
   small,
@@ -35,7 +35,7 @@ h3 {
 h4,
 h5,
 h6 {
-  margin-top: (@line-height-computed / 2);
+  margin-top: 0;
   margin-bottom: (@line-height-computed / 2);
 
   small,
@@ -127,8 +127,8 @@ cite    { font-style: normal; }
 
 .page-header {
   padding-bottom: ((@line-height-computed / 2) - 1);
-  margin: (@line-height-computed * 2) 0 @line-height-computed;
-  border-bottom: 1px solid @page-header-border-color;
+  margin: 0 0 @line-height-computed;
+  border-bottom: 3px solid @page-header-border-color;
 }
 
 
