--- a/src/sentry/static/sentry/less/sentry-simple-variables.less
+++ b/src/sentry/static/sentry/less/sentry-simple-variables.less
@@ -120,7 +120,7 @@
 @btn-font-weight:                600;
 
 @btn-default-color:              #34343F;
-@btn-default-bg:                 #F6F7F7;
+@btn-default-bg:                 #F7F7F7;
 @btn-default-border:             #E9EAEA;
 
 @btn-primary-color:              #fff;
@@ -152,8 +152,8 @@
 @input-bg:                       #fff;
 @input-bg-disabled:              @gray-lighter;
 
-@input-color:                    @gray;
-@input-border:                   #ccc;
+@input-color:                    #34343f;
+@input-border:                   #e9eaea;
 @input-border-radius:            @border-radius-base;
 @input-border-focus:             #66afe9;
 
@@ -614,7 +614,7 @@
 @headings-small-color:        @gray-light;
 @blockquote-small-color:      @gray-light;
 @blockquote-border-color:     @gray-lighter;
-@page-header-border-color:    @gray-lighter;
+@page-header-border-color:    #F1F2F3;
 
 // Miscellaneous
 // -------------------------
