--- a/src/sentry/static/sentry/bootstrap3/mixins.less
+++ b/src/sentry/static/sentry/bootstrap3/mixins.less
@@ -787,8 +787,6 @@
     .box-shadow(inset 0 1px 1px rgba(0,0,0,.075)); // Redeclare so transitions work
     &:focus {
       border-color: darken(@border-color, 10%);
-      @shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 6px lighten(@border-color, 20%);
-      .box-shadow(@shadow);
     }
   }
   // Set validation states also for addons
@@ -815,9 +813,8 @@
 .form-control-focus(@color: @input-border-focus) {
   @color-rgba: rgba(red(@color), green(@color), blue(@color), .6);
   &:focus {
-    border-color: @color;
+    border-color: darken(@input-border, 10%);
     outline: 0;
-    .box-shadow(~"inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px @{color-rgba}");
   }
 }
 
