--- a/src/sentry/static/sentry/less/selectize.less
+++ b/src/sentry/static/sentry/less/selectize.less
@@ -20,7 +20,7 @@
 @selectize-color-dropdown: #fff;
 @selectize-color-dropdown-border: @selectize-color-border;
 @selectize-color-dropdown-border-top: #f0f0f0;
-@selectize-color-dropdown-item-active: #f5fafd;
+@selectize-color-dropdown-item-active: #f7f7f7;
 @selectize-color-dropdown-item-active-text: #495c68;
 @selectize-color-dropdown-item-create-text: rgba(red(@selectize-color-text), green(@selectize-color-text), blue(@selectize-color-text), 0.5);
 @selectize-color-dropdown-item-create-active-text: @selectize-color-dropdown-item-active-text;
