Stub out more pages

--- a/src/sentry/static/sentry/bootstrap3/tables.less
+++ b/src/sentry/static/sentry/bootstrap3/tables.less
@@ -16,7 +16,7 @@ th {
 
 .table {
   width: 100%;
-  margin-bottom: @line-height-computed;
+  margin-bottom: 20px;
   // Cells
   > thead,
   > tbody,
@@ -27,7 +27,7 @@ th {
         padding: @table-cell-padding;
         line-height: @line-height-base;
         vertical-align: top;
-        border-top: 1px solid @table-border-color;
+        border-top: 2px solid @table-border-color;
       }
     }
   }
