--- a/src/sentry/static/sentry/bootstrap3/labels.less
+++ b/src/sentry/static/sentry/bootstrap3/labels.less
@@ -4,15 +4,14 @@
 
 .label {
   display: inline;
-  padding: .2em .6em .3em;
-  font-size: 75%;
+  padding: .1em .3em;
   font-weight: bold;
   line-height: 1;
   color: @label-color;
   text-align: center;
   white-space: nowrap;
   vertical-align: baseline;
-  border-radius: .25em;
+  border-radius: 5px;
 
   // Add hover effects, but only for links
   &[href] {
