--- a/src/sentry/static/sentry/bootstrap3/type.less
+++ b/src/sentry/static/sentry/bootstrap3/type.less
@@ -25,7 +25,7 @@ h1,
 h2,
 h3 {
   margin-top: 0;
-  margin-bottom: (@line-height-computed / 2);
+  margin-bottom: 20px;
 
   small,
   .small {
@@ -36,7 +36,7 @@ h4,
 h5,
 h6 {
   margin-top: 0;
-  margin-bottom: (@line-height-computed / 2);
+  margin-bottom: 20px;
 
   small,
   .small {
@@ -75,6 +75,10 @@ p {
 // -------------------------
 
 // Ex: 14px base font * 85% = about 12px
+strong {
+  font-weight: 600;
+}
+
 small,
 .small  { font-size: 85%; }
 
