--- a/src/sentry/static/sentry/css/sentry-simple.css
+++ b/src/sentry/static/sentry/css/sentry-simple.css
@@ -374,7 +374,7 @@ h1,
 h2,
 h3 {
   margin-top: 0;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
 }
 h1 small,
 h2 small,
@@ -388,7 +388,7 @@ h4,
 h5,
 h6 {
   margin-top: 0;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
 }
 h4 small,
 h5 small,
@@ -435,6 +435,9 @@ p {
   .lead {
     font-size: 21px;
   }
+}
+strong {
+  font-weight: 600;
 }
 small,
 .small {
@@ -1373,11 +1376,11 @@ th {
   padding: 8px;
   line-height: 1.428571429;
   vertical-align: top;
-  border-top: 1px solid #dddddd;
+  border-top: 2px solid #f1f2f3;
 }
 .table > thead > tr > th {
   vertical-align: bottom;
-  border-bottom: 2px solid #dddddd;
+  border-bottom: 2px solid #f1f2f3;
 }
 .table > caption + thead > tr:first-child > th,
 .table > colgroup + thead > tr:first-child > th,
@@ -1388,7 +1391,7 @@ th {
   border-top: 0;
 }
 .table > tbody + tbody {
-  border-top: 2px solid #dddddd;
+  border-top: 2px solid #f1f2f3;
 }
 .table .table {
   background-color: #ffffff;
@@ -1402,7 +1405,7 @@ th {
   padding: 5px;
 }
 .table-bordered {
-  border: 1px solid #dddddd;
+  border: 1px solid #f1f2f3;
 }
 .table-bordered > thead > tr > th,
 .table-bordered > tbody > tr > th,
@@ -1410,7 +1413,7 @@ th {
 .table-bordered > thead > tr > td,
 .table-bordered > tbody > tr > td,
 .table-bordered > tfoot > tr > td {
-  border: 1px solid #dddddd;
+  border: 1px solid #f1f2f3;
 }
 .table-bordered > thead > tr > th,
 .table-bordered > thead > tr > td {
@@ -1422,7 +1425,7 @@ th {
 }
 .table-hover > tbody > tr:hover > td,
 .table-hover > tbody > tr:hover > th {
-  background-color: #f5f5f5;
+  background-color: #f1f2f3;
 }
 table col[class*="col-"] {
   position: static;
@@ -1443,12 +1446,12 @@ table th[class*="col-"] {
 .table > thead > .active > th,
 .table > tbody > .active > th,
 .table > tfoot > .active > th {
-  background-color: #f5f5f5;
+  background-color: #f1f2f3;
 }
 .table-hover > tbody > tr > .active:hover,
 .table-hover > tbody > .active:hover > td,
 .table-hover > tbody > .active:hover > th {
-  background-color: #e8e8e8;
+  background-color: #e3e5e7;
 }
 .table > thead > tr > .success,
 .table > tbody > tr > .success,
@@ -1505,7 +1508,7 @@ table th[class*="col-"] {
     overflow-y: hidden;
     overflow-x: scroll;
     -ms-overflow-style: -ms-autohiding-scrollbar;
-    border: 1px solid #dddddd;
+    border: 1px solid #f1f2f3;
     -webkit-overflow-scrolling: touch;
   }
   .table-responsive > .table {
@@ -3579,7 +3582,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
   color: #cccccc;
 }
 .breadcrumb > .active {
-  color: #999999;
+  color: #4c5459;
 }
 .pagination {
   display: inline-block;
@@ -3727,15 +3730,14 @@ textarea.input-group-sm > .input-group-btn > .btn {
 }
 .label {
   display: inline;
-  padding: .2em .6em .3em;
-  font-size: 75%;
+  padding: .1em .3em;
   font-weight: bold;
   line-height: 1;
   color: #ffffff;
   text-align: center;
   white-space: nowrap;
   vertical-align: baseline;
-  border-radius: .25em;
+  border-radius: 5px;
 }
 .label[href]:hover,
 .label[href]:focus {
@@ -3751,11 +3753,11 @@ textarea.input-group-sm > .input-group-btn > .btn {
   top: -1px;
 }
 .label-default {
-  background-color: #999999;
+  background-color: #dddddd;
 }
 .label-default[href]:hover,
 .label-default[href]:focus {
-  background-color: #808080;
+  background-color: #c4c4c4;
 }
 .label-primary {
   background-color: #49a9e6;
@@ -4182,7 +4184,7 @@ a.list-group-item.active:focus .list-group-item-text {
 }
 .panel > .panel-body + .table,
 .panel > .panel-body + .table-responsive {
-  border-top: 1px solid #dddddd;
+  border-top: 1px solid #f1f2f3;
 }
 .panel > .table > tbody:first-child th,
 .panel > .table > tbody:first-child td {
@@ -4950,6 +4952,9 @@ button.close {
 }
 .pull-left {
   float: left !important;
+}
+.align-right {
+  text-align: right;
 }
 .hide {
   display: none !important;
@@ -5726,6 +5731,11 @@ td.visible-print {
   position: relative;
   top: 3px;
 }
+.back-button.icon-arrow-left {
+  font-size: 48px !important;
+  position: absolute;
+  left: -60px;
+}
 .btn-sm .icon-arrow-down,
 .btn-sm .icon-arrow-right,
 .btn-sm .icon-arrow-left {
@@ -5800,7 +5810,11 @@ header .project-dropdown .icon-arrow-down {
   top: 0;
 }
 .container {
-  max-width: 980px;
+  max-width: 940px;
+  position: relative;
+}
+#sidebar h6 {
+  margin: 0 0 5px;
 }
 .project-nav {
   margin: 0 0 20px;
@@ -5824,6 +5838,9 @@ header .project-dropdown .icon-arrow-down {
   margin-right: 24px;
   padding-left: 0;
 }
+.nav-stacked {
+  margin: 0 0 20px;
+}
 .nav-stacked li {
   margin: 0 0 6px;
 }
@@ -5838,6 +5855,9 @@ header .project-dropdown .icon-arrow-down {
 .nav-stacked li.active:focus a {
   background: #49a9e6;
 }
+.stream-actions {
+  margin: 0 0 20px;
+}
 .events {
   padding-left: 0;
   list-style: none;
@@ -5846,6 +5866,12 @@ header .project-dropdown .icon-arrow-down {
   position: relative;
   border-bottom: 3px solid #F8F9FA;
   padding: 16px 0 16px 64px;
+}
+.events .event:first-child {
+  padding-top: 0;
+}
+.events .event:first-child .count {
+  top: 0;
 }
 .events .event:last-child {
   border-bottom: none;
@@ -5889,4 +5915,31 @@ header .project-dropdown .icon-arrow-down {
 }
 .events .details .meta a {
   color: #c6c6cc;
+}
+.box {
+  border: 2px solid #f1f2f3;
+  border-radius: 5px;
+  padding: 15px 15px 0;
+  margin: 0 0 30px;
+}
+.table-no-padding tbody tr td {
+  padding: 5px 0;
+}
+.table-borderless tbody tr td {
+  border: 0;
+}
+#explore h2 {
+  margin: 0 0 10px;
+}
+#explore .breadcrumb {
+  background: transparent;
+  margin: 0 0 20px;
+  padding: 0 0 20px;
+  border-bottom: 3px solid #F8F9FA;
+}
+#explore .breadcrumb a {
+  font-weight: 600;
+}
+#explore .breadcrumb li {
+  font-size: 18px;
 }
