--- a/src/sentry/static/sentry/less/sentry-simple-variables.less
+++ b/src/sentry/static/sentry/less/sentry-simple-variables.less
@@ -108,10 +108,10 @@
 
 @table-bg:                           transparent; // overall background-color
 @table-bg-accent:                    #f9f9f9; // for striping
-@table-bg-hover:                     #f5f5f5;
+@table-bg-hover:                     #f1f2f3;
 @table-bg-active:                    @table-bg-hover;
 
-@table-border-color:                 #ddd; // table and cell border
+@table-border-color:                 #f1f2f3; // table and cell border
 
 
 // Buttons
@@ -427,7 +427,7 @@
 // Labels
 // -------------------------
 
-@label-default-bg:            @gray-light;
+@label-default-bg:            #ddd;
 @label-primary-bg:            @brand-primary;
 @label-success-bg:            @brand-success;
 @label-info-bg:               @brand-info;
@@ -570,7 +570,7 @@
 // -------------------------
 @breadcrumb-bg:               #f5f5f5;
 @breadcrumb-color:            #ccc;
-@breadcrumb-active-color:     @gray-light;
+@breadcrumb-active-color:     @gray-dark;
 @breadcrumb-separator:        "/";
 
 
