--- a/src/sentry/static/sentry/css/sentry-simple.css
+++ b/src/sentry/static/sentry/css/sentry-simple.css
@@ -5962,30 +5962,77 @@ header .project-dropdown .icon-arrow-down {
 }
 .timeline .timeline-item .graph {
   padding-top: 23px;
+  position: relative;
+  margin-right: -15px;
 }
-.timeline .timeline-item .graph .bar {
-  height: 12px;
-  width: 100%;
+.timeline .timeline-item .graph .scale {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
+.timeline .timeline-item .graph .scale .scale-line {
+  position: absolute;
+  top: -10px;
+  bottom: -36px;
+  border-left: 2px solid #f8f8f9;
+}
+.timeline .timeline-item .graph .scale .scale-line .scale-label {
+  font-size: 11px;
+  color: rgba(0, 0, 0, 0.2);
+  padding-left: 5px;
+}
+.timeline .timeline-item .graph .scale .scale-line-25 {
+  left: 25%;
+}
+.timeline .timeline-item .graph .scale .scale-line-50 {
+  left: 50%;
+}
+.timeline .timeline-item .graph .scale .scale-line-75 {
+  left: 75%;
+}
+.timeline .timeline-item .graph .blip-container {
+  position: relative;
+  z-index: 2;
+  left: -7px;
+}
+.timeline .timeline-item .graph .blip {
+  height: 16px;
+  width: 16px;
   background: #dfe1e3;
   border: 2px solid rgba(0, 0, 0, 0.1);
   border-radius: 12px;
-  margin: 0 0 4px;
+  margin: 5px 0 4px;
 }
-.timeline .timeline-item .graph .bar-label {
+.timeline .timeline-item .graph .blip-label {
+  position: absolute;
+  top: -3px;
+  left: 22px;
   color: #bec3c7;
   font-size: 12px;
   white-space: nowrap;
+  background: #fff;
+  box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.1);
+  padding: 2px 6px;
+  border-radius: 4px;
 }
-.timeline .timeline-item.console .bar {
+.timeline .timeline-item .context {
+  margin-top: 32px;
+}
+.timeline .timeline-item .context pre {
+  border: 2px solid rgba(0, 0, 0, 0.05);
+}
+.timeline .timeline-item.console .blip {
   background: #E6D347;
 }
-.timeline .timeline-item.user-action .bar {
-  background: #47e684;
+.timeline .timeline-item.user-action .blip {
+  background: #5ae647;
 }
-.timeline .timeline-item.ajax .bar {
+.timeline .timeline-item.ajax .blip {
   background: #49a9e6;
 }
-.timeline .timeline-item.error .bar {
+.timeline .timeline-item.error .blip {
   background: #e6475a;
 }
 .timeline .timeline-item.error {
@@ -6000,7 +6047,12 @@ header .project-dropdown .icon-arrow-down {
   position: relative;
   z-index: 2;
 }
-.timeline .timeline-item.error:after {
+.timeline .timeline-item.error .scale-line {
+  border-left: 2px solid rgba(0, 0, 0, 0.04) !important;
+  top: -11px !important;
+  bottom: -38px !important;
+}
+.timeline .timeline-item.error:before {
   background: #fef6f7;
   position: absolute;
   content: "";
@@ -6009,10 +6061,9 @@ header .project-dropdown .icon-arrow-down {
   left: -2px;
   right: -2px;
   bottom: -3px;
-  z-index: 1;
   border: 2px solid rgba(0, 0, 0, 0.05);
 }
-.timeline .timeline-item.error:last-child:after {
+.timeline .timeline-item.error:last-child:before {
   border-radius: 0 0 5px 5px;
 }
 .box {
