--- a/src/sentry/static/sentry/less/sentry-simple.less
+++ b/src/sentry/static/sentry/less/sentry-simple.less
@@ -288,37 +288,87 @@ header {
     }
     .graph {
       padding-top: 23px;
-      .bar-container {
+      position: relative;
+      margin-right: -15px;
 
+      .scale {
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+
+        .scale-line {
+          position: absolute;
+          top: -10px;
+          bottom: -36px;
+          border-left: 2px solid lighten(#f1f2f3, 2.5);
+          .scale-label {
+            font-size: 11px;
+            color: rgba(0,0,0, .2);
+            padding-left: 5px;
+          }
+        }
+
+        .scale-line-0   {}
+        .scale-line-25  {left: 25%;}
+        .scale-line-50  {left: 50%;}
+        .scale-line-75  {left: 75%;}
       }
-      .bar {
-        height: 12px;
-        width: 100%;
+
+      .blip-container {
+        position: relative;
+        z-index: 2;
+        left: -7px;
+      }
+      .blip {
+        height: 16px;
+        width: 16px;
         background: lighten(#bec3c7, 12);
         border: 2px solid rgba(0,0,0, .1);
         border-radius: 12px;
-        margin: 0 0 4px;
+        margin: 5px 0 4px;
       }
-      .bar-label {
+      .blip-label {
+        position: absolute;
+        top: -3px;
+        left: 22px;
         color: #bec3c7;
         font-size: 12px;
         white-space: nowrap;
+        background: #fff;
+        box-shadow: 0 0 0 2px rgba(0,0,0, .1);
+        padding: 2px 6px;
+        border-radius: 4px;
       }
     }
-    &.console .bar     {background: #E6D347;}
-    &.user-action .bar {background: #47E684}
-    &.ajax .bar        {background: #49A9E6}
-    &.timeout .bar     {}
-    &.error .bar       {background: #E6475A}
+
+    .context {
+      margin-top: 32px;
+      pre {
+        border: 2px solid rgba(0,0,0, .05);
+      }
+    }
+
+    &.console .blip     {background: #E6D347;}
+    &.user-action .blip {background: #5AE647}
+    &.ajax .blip        {background: #49A9E6}
+    &.timeout .blip     {}
+    &.error .blip       {background: #E6475A}
 
     &.error {
       color: #7E5B5F;
       strong, .bar-label { color: lighten(#7E5B5F, 30) }
-      .description,.graph {
+      .description, .graph {
         position: relative;
         z-index: 2;
       }
-      &:after {
+      .scale-line {
+        border-left: 2px solid rgba(0,0,0, .04) !important;
+        top: -11px !important;
+        bottom: -38px !important;
+      }
+      &:before {
         background: lighten(#E6475A, 39);
         position: absolute;
         content: "";
@@ -327,10 +377,10 @@ header {
         left: -2px;
         right: -2px;
         bottom: -3px;
-        z-index: 1;
+        // z-index: 1;
         border: 2px solid rgba(0,0,0, .05);
       }
-      &:last-child:after {
+      &:last-child:before {
         border-radius: 0 0 5px 5px;
       }
     }
