--- a/src/sentry/static/sentry/less/sentry-simple.less
+++ b/src/sentry/static/sentry/less/sentry-simple.less
@@ -390,7 +390,7 @@ header {
 .box {
   border: 2px solid #f1f2f3;
   border-radius: 7px;
-  margin: 0 0 20px;
+  margin: 0 0 30px;
   .box-header {
     padding: 10px 14px;
     border-bottom: 2px solid #f1f2f3;
@@ -438,6 +438,22 @@ header {
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
+    }
+  }
+}
+
+.frame {
+  .context-toggle {
+    float: right;
+  }
+  pre {
+    margin-top: 10px;
+    background: transparent;
+    padding: 0;
+    border: 0;
+
+    .L6 {
+      background: #f8f8f8;
     }
   }
 }
